--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/TableCells/Home/HomeTableViewCell.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/TableCells/Home/HomeTableViewCell.xib
@@ -79,7 +79,7 @@
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0bv-0c-DA6">
+                                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0bv-0c-DA6">
                                                                 <rect key="frame" x="0.0" y="30" width="130" height="30"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bn4-PV-dck" customClass="GreenButton" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
@@ -96,6 +96,10 @@
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q9V-6v-NQy" customClass="GreenButton" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
                                                                         <rect key="frame" x="70" y="0.0" width="60" height="30"/>
                                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" secondItem="Q9V-6v-NQy" secondAttribute="height" multiplier="2:1" id="RAl-xc-CaX"/>
+                                                                            <constraint firstAttribute="height" constant="30" id="zyG-Vt-8y1"/>
+                                                                        </constraints>
                                                                         <userDefinedRuntimeAttributes>
                                                                             <userDefinedRuntimeAttribute type="string" keyPath="nameButton" value="Accept"/>
                                                                         </userDefinedRuntimeAttributes>
