--- a/Meter Card and Smart Parking Meter/Storyboards/Business.storyboard
+++ b/Meter Card and Smart Parking Meter/Storyboards/Business.storyboard
@@ -53,7 +53,7 @@
                                 <rect key="frame" x="20" y="5.5" width="83" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="lcN-Lu-vHX">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placeholderPerson" translatesAutoresizingMaskIntoConstraints="NO" id="lcN-Lu-vHX">
                                         <rect key="frame" x="0.0" y="1.5" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="NVg-wF-hpO"/>
@@ -90,6 +90,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="ic_notifs"/>
+                                <connections>
+                                    <action selector="notificationAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="1Yc-vZ-PL5"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
@@ -587,10 +590,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="demo" width="1280" height="1280"/>
         <image name="ic_addImage" width="335" height="119"/>
         <image name="ic_addLocation" width="64" height="64"/>
         <image name="ic_notifs" width="17" height="18"/>
+        <image name="ic_placeholderPerson" width="95" height="95"/>
         <image name="ic_shadowMap" width="375" height="287"/>
         <image name="ic_topShadow" width="375" height="174"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
