--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/TableCells/Message/MessageTableViewCell.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/TableCells/Message/MessageTableViewCell.xib
@@ -29,7 +29,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="nD5-de-gxA">
                                 <rect key="frame" x="16" y="10" width="181" height="40"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="trg-OD-LQd" customClass="rImage" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placeholderPerson" translatesAutoresizingMaskIntoConstraints="NO" id="trg-OD-LQd" customClass="rImage" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="trg-OD-LQd" secondAttribute="height" multiplier="1:1" id="TKr-gf-oJS"/>
@@ -87,7 +87,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="demo" width="1280" height="1280"/>
+        <image name="ic_placeholderPerson" width="95" height="95"/>
         <namedColor name="000000">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
