--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/ParkingOwner /ParkingOwner.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/ParkingOwner /ParkingOwner.xib
@@ -68,12 +68,22 @@
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="JW1-Hd-iwX">
                             <rect key="frame" x="231" y="18.5" width="93" height="43"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_message" translatesAutoresizingMaskIntoConstraints="NO" id="1pn-7I-dBP">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBO-jS-2yw">
                                     <rect key="frame" x="0.0" y="0.0" width="43" height="43"/>
-                                </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_call" translatesAutoresizingMaskIntoConstraints="NO" id="9Zx-8l-KhX">
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" image="ic_message"/>
+                                    <connections>
+                                        <action selector="messageAction:" destination="-1" eventType="touchUpInside" id="K7j-bS-XIi"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgK-FD-5g4">
                                     <rect key="frame" x="50" y="0.0" width="43" height="43"/>
-                                </imageView>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" image="ic_call"/>
+                                    <connections>
+                                        <action selector="callAction:" destination="-1" eventType="touchUpInside" id="uJm-64-Y6T"/>
+                                    </connections>
+                                </button>
                             </subviews>
                         </stackView>
                     </subviews>
